--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    color: #B9B18B;
+    background-image: url('assets/Front.jpg');
+    background-repeat: repeat;
+    background-color: #cccccc;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+      -o-background-size: cover;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      /* padding-top: 70px;  */
+}
