--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,162 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-    color: #B9B18B;
-    background-image: url('assets/Front.jpg');
-    background-repeat: repeat;
-    background-color: #cccccc;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-      -o-background-size: cover;
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      /* padding-top: 70px;  */
-}
+/* Layout styles -----------------------------------*/
+@media (min-width: 620px) {
+    main {
+      column-count: 2;
+      column-gap: 20px;
+    }
+    
+    section {
+      break-inside: avoid;
+    }
+    .responsive-banner{
+        height: 40px;
+    }
+  }
+  
+  @media (min-width: 960px) {
+    main {
+       column-count: 3;
+    }
+  }
+   
+  @media (max-width: 768px) {
+    .responsive-banner {
+       background-image:  url('assets/banner_mobile.png');
+    }
+  }
+  @media (max-width: 1024px) {
+    .responsive-banner {
+       background-image:  url('assets/banner_tablet.png');
+    }
+  }
+  @media (min-width: 1024px) {
+    .responsive-banner {
+       background-image:  url('assets/banner_desktop.png');
+    }
+  }
+  
+  /* styles */
+  
+  :root {
+    --blue: #34495e;
+    --green: #e74c3c;
+    --yellow: #C9C243;
+    --orange: #f19323;
+    --red: #3498db;
+  }
+  
+  body {
+    background-color: #424042;
+    font-family: 'Ubuntu', sans-serif;
+    color: #34495e;
+  }
+  
+  main {    
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  header {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px 20px 0;
+  }
+  
+  .title {
+    font-size: 2.6em;
+    text-align: center;
+    color: white;
+    margin-bottom: 20px
+  }
+  
+  .figure-img {
+    display: block;
+    width: 100%;
+    object: fit;
+  }
+  
+  h2 {
+    font-size: 1.4em;
+    padding: 10px;
+  }
+  
+  p {
+    margin-bottom: 1em;
+    padding: 0 10px;
+  }
+  
+  .info-link {
+    text-decoration: none;
+    color: var(--green);
+    padding: 10px;
+    display: block;
+  }
+  
+  .options {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px;
+    border-top: 3px solid var(--orange);
+    border-radius: 3px;
+    background-color: white;
+  }
+  .responsive-banner{
+      width: 100%;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+  }
+  
+  .options-link {
+    text-decoration: none;
+    font-size: 0.9em;
+    color: var(--orange);
+  }
+  
+  section {
+    border-top: 3px solid var(--orange);
+    border-radius: 3px;
+    background-color: white;
+    margin-bottom: 20px;
+    overflow: hidden;
+  }
+  
+  .section-img, main-img {
+    display: block;
+    padding: 10px;
+    margin: 0 auto;
+  }
+  
+  .bigtitle {
+    padding: 0;
+  }
+  
+  .bigtitle-title {
+    color: white;
+    background-color: var(--orange);
+    margin-bottom: 10px;
+  }
+  
+  .bigbottom-link {
+    background-color: var(--green);
+    color: white;
+  }
+  
+  .profile {
+    width: 80%;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
+  
+  @media (min-width: 620px) {
+    .options-link {
+      font-size: 1.4em;
+    }
+  }
