--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,9 +1,69 @@
 
 
   <main class="grid">
-    <img src="../../assets/gallery/sniper (1).jpg" alt="Sample photo">
-    <img src="../../assets/gallery/sniper (2).jpg" alt="Sample photo">
-    <img src="../../assets/gallery/sniper (3).jpg" alt="Sample photo">
-    <img src="../../assets/gallery/sniper (4).jpg" alt="Sample photo">
+  
+
+    <ul class="list-inline">
+      <li data-toggle="modal" data-target="#myModal"><a href="#myGallery" data-slide-to="0"><img class="img-thumbnail" src="../../assets/gallery/sniper (1).jpg"><br>
+   </a></li>
+      <li data-toggle="modal" data-target="#myModal"><a href="#myGallery" data-slide-to="1"><img class="img-thumbnail" src="../../assets/gallery/sniper (2).jpg"><br>
+  </a></li>
+      <li data-toggle="modal" data-target="#myModal"><a href="#myGallery" data-slide-to="2"><img class="img-thumbnail" src="../../assets/gallery/sniper (3).jpg"><br>
+    </a></li>
+      <li data-toggle="modal" data-target="#myModal"><a href="#myGallery" data-slide-to="3"><img class="img-thumbnail" src="../../assets/gallery/sniper (4).jpg"><br>
+    </a></li>
+  
+    <!--end of thumbnails-->
+    </ul>
+<!--begin modal window-->
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+  <div class="modal-content">
+  <div class="modal-header">
+  <div class="pull-left">Sniper  - מטווח ירי איירסופט</div>
+  <button type="button" class="close" data-dismiss="modal" title="Close"> <span class="glyphicon glyphicon-remove"></span></button>
+  </div>
+  <div class="modal-body">
+  
+  <!--CAROUSEL CODE GOES HERE-->
+  <!--begin carousel-->
+<div id="myGallery" class="carousel slide" data-interval="false">
+  <div class="carousel-inner">
+  <div class="item active"> <img src="../../assets/gallery/sniper (1).jpg" alt="item0">
+  <div class="carousel-caption">
+
+  </div>
+  </div>
+  <div class="item"> <img src="../../assets/gallery/sniper (2).jpg" alt="item1">
+  <div class="carousel-caption">
+
+  </div>
+  </div>
+  <div class="item"> <img src="../../assets/gallery/sniper (3).jpg" alt="item2">
+  <div class="carousel-caption">
+
+  </div>
+  </div>
+  <div class="item"> <img src="../../assets/gallery/sniper (4).jpg" alt="item3">
+  <div class="carousel-caption">
+
+  </div>
+  </div>
+ 
+  <!--end carousel-inner--></div>
+  <!--Begin Previous and Next buttons-->
+  <a class="left carousel-control" href="#myGallery" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#myGallery" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span></a>
+  <!--end carousel--></div>
+  <!--end modal-body--></div>
+  <div class="modal-footer">
+  <div class="pull-left">
+ 
+  </div>
+  <button class="btn-sm close" type="button" data-dismiss="modal">Close</button>
+  <!--end modal-footer--></div>
+  <!--end modal-content--></div>
+  <!--end modal-dialoge--></div>
+  <!--end myModal-->></div>
 
   </main>
+
