--- a/src/styles.css
+++ b/src/styles.css
@@ -20,10 +20,10 @@
     }
   }
   
-  @media (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     .responsive-banner {
        background-image:  url('assets/banner_mobile.jpg');
-       background-size: 100% 100%;
+      /* background-size: 100% 100%; */
     }
   }
   @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -31,7 +31,7 @@
        background-image:  url('assets/banner_tablet.png');
     }
   }
-  @media (min-width: 1024px) {
+  @media screen and (min-width: 1024px) {
     .responsive-banner {
        background-image:  url('assets/banner_desktop.png');
     }
