Working on main section, more media queries were added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<header>
-        <div class="responsive-banner">
-               
-                </div>
-        <div class="options">
-                
-          <a routerLink="contact" class="options-link link-active">צור קשר</a>
-          <a routerLink="gallery" class="options-link">תמונות</a>
-          <a routerLink="about" class="options-link">אודות</a>
-          <a routerLink="" class="options-link">סנייפר - מטווח ירי</a>
-         
-        </div>
-        
-      </header>
+<app-navbar></app-navbar>
     <main>
             
      <section>
