--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,34 @@
-<p>
-  main works!
-</p>
+<div class="row" style="background-color: #AB9750" >
+  <div class="col-md-2 col-xs-2">
+  </div>
+
+
+  <div class="col-md-8 col-xs-8" id="contact" style="color: #FFFDED">
+    <h4 style="text-align: center" >
+      הזמן את האירוע הבא שלך
+      וקבל חווית ירי חדשה, כמו שלא
+      חווית מעולם, וכל זה בסביבה מהנה,
+     מרגשת ובטוחה. בוא לחדד את יכולות הירי
+     שלך, בין אם באירוע פרטי, אירוע חברה
+     מסיבת יום הולדת, גיבוש צוות וכד.
+      אנו מבטיחים הרפתקה משעשעת 
+
+      <br>
+     
+      <!-- <a href="tel:+972508293951">+972 50-829-3951</a> -->
+    </h4>
+    <h1  id="howItWorks">איך זה עובד</h1>
+    <div id="sniperList" dir="RTL">
+      <ul style="color: #FFFDED">
+        <li>מטווח ירי נייד - אנחנו נגיע אליכם</li>
+        <li>מדריכים מקצועיים</li>
+        <li>דמוי נשק עמיתי</li>
+        <li>בטיחות מלאה</li>
+      </ul>
+    </div>
+  </div>
+
+
+  <div class="col-md-2 col-xs-2">
+  </div>
+</div>
