--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,29 +1,18 @@
 
   
 
-
-<nav class="navbar navbar-inverse navbar-fixed-top example6">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar6">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-       
-      </div>
-      <div id="navbar6" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-
-          <li class="active"><a routerLink="">סנייפר - מטווח</a></li>
-          <li><a routerLink="about">אודות</a></li>
-          <li><a routerLink="gallery">גלריה</a></li>
-          <li><a routerLink="contact">צור קשר</a></li>
-        </ul>
-      </div>
-      <!--/.nav-collapse -->
-    </div>
-    <!--/.container-fluid -->
-  </nav>
+<header>
+  <div class="responsive-banner">
+         
+          </div>
+  <div class="options">
+          
+    <a routerLink="contact" class="options-link link-active">צור קשר</a>
+    <a routerLink="gallery" class="options-link">תמונות</a>
+    <a routerLink="about" class="options-link">אודות</a>
+    <a routerLink="" class="options-link">סנייפר - מטווח ירי</a>
+   
+  </div>
+  
+</header>
 
