--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,19 +1,22 @@
-<div class="row" >
-  <div class="col-md-3 col-xs-2">
+<div class="row" style="background-color: #AB9750">
+  <div class="col-md-2 col-xs-2">
   </div>
 
 
-  <div class="col-md-6 col-xs-8" id="contact">
+  <div class="col-md-8 col-xs-8"  id="contact" style="color: #191919;" >
+      <!-- style="color: #424042;" -->
     <h3 style="text-align: center" >
-      Hi! For more information and interesting offers please contact me by mail:
-      mashasharf@mymail.com
-      or by phone:
+      לשאלות ובירורים נא לפנות בטלפון או במייל
       <br>
-      <a href="tel:+972508293951">+972 50-829-3951</a>
+      <br>
+      <a href="tel:+972527381578">+972527381578</a> <i class="fas fa-phone"></i>
+      <br>
+      <br>
+      <a href="mailto:sniper.tir.israel@gmail.com">sniper.tir.israel@gmail.com</a> <i class="fas fa-envelope"></i>
     </h3>
   </div>
 
 
-  <div class="col-md-3 col-xs-2">
+  <div class="col-md-2 col-xs-2">
   </div>
 </div>
