--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,9 +1,11 @@
+
 <div class="row" style="background-color: #AB9750" >
   <div class="col-md-2 col-xs-2">
   </div>
 
-
-  <div class="col-md-8 col-xs-8" id="contact" style="color: #FFFDED">
+  
+  <div class="col-md-8 col-xs-8" id="contact" style="color: #191919;">
+      
     <h4 style="text-align: center" >
       הזמן את האירוע הבא שלך
       וקבל חווית ירי חדשה, כמו שלא
@@ -14,12 +16,15 @@
       אנו מבטיחים הרפתקה משעשעת 
 
       <br>
-     
+      </h4>
+    
+      
       <!-- <a href="tel:+972508293951">+972 50-829-3951</a> -->
-    </h4>
+    
+    
     <h1  id="howItWorks">איך זה עובד</h1>
     <div id="sniperList" dir="RTL">
-      <ul style="color: #FFFDED">
+      <ul style="color: #191919;">
         <li>מטווח ירי נייד - אנחנו נגיע אליכם</li>
         <li>מדריכים מקצועיים</li>
         <li>דמוי נשק עמיתי</li>
