--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -6,7 +6,7 @@
   
   <div class="col-md-8 col-xs-8" id="contact" style="color: #191919;">
       
-    <h4 style="text-align: center" >
+    <h3 style="text-align: center" >
       הזמן את האירוע הבא שלך
       וקבל חווית ירי חדשה, כמו שלא
       חווית מעולם, וכל זה בסביבה מהנה,
@@ -16,19 +16,19 @@
       אנו מבטיחים הרפתקה משעשעת 
 
       <br>
-      </h4>
+      </h3>
     
       
       <!-- <a href="tel:+972508293951">+972 50-829-3951</a> -->
     
     
-    <h1  id="howItWorks">איך זה עובד</h1>
-    <div id="sniperList" dir="RTL">
+    <h1  id="howItWorks"  style="text-align: center">איך זה עובד</h1>
+    <div id="sniperList" dir="RTL"  style="text-align: center">
       <ul style="color: #191919;">
-        <li>מטווח ירי נייד - אנחנו נגיע אליכם</li>
-        <li>מדריכים מקצועיים</li>
-        <li>דמוי נשק עמיתי</li>
-        <li>בטיחות מלאה</li>
+        <li><h4> מטווח ירי נייד - אנחנו נגיע אליכם </h4></li>
+        <li><h4> מדריכים מקצועיים </h4></li>
+        <li><h4> דמוי נשק עמיתי </h4></li>
+        <li><h4> בטיחות מלאה </h4></li>
       </ul>
     </div>
   </div>
