Main section style was added

--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -22,4 +22,10 @@ li{
     padding: 5px;
     font-size: 30px;
     }
+
+.adds{
+    padding: 15px;
+    border-radius: 25px;
+    border: 2px solid  #7F6941;
+}
     
