--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,23 +1,26 @@
 
 <div class="row" style="background-color: #AB9750" >
-  <div class="col-md-2 col-xs-2">
+  <div class="col-md-2 col-xs-1">
   </div>
 
   
-  <div class="col-md-8 col-xs-8" id="contact" style="color: #191919;">
-      
+  <div class="col-md-8 col-xs-10" id="contact" style="color: #191919;">
+      <div class="adds" style="background-color: #BCB37C">
     <h3 style="text-align: center" >
       הזמן את האירוע הבא שלך
       וקבל חווית ירי חדשה, כמו שלא
       חווית מעולם, וכל זה בסביבה מהנה,
-     מרגשת ובטוחה. בוא לחדד את יכולות הירי
+     מרגשת ובטוחה.
+      <br>
+      <br>
+      בוא לחדד את יכולות הירי
      שלך, בין אם באירוע פרטי, אירוע חברה
      מסיבת יום הולדת, גיבוש צוות וכד.
-      אנו מבטיחים הרפתקה משעשעת 
+      אנו מבטיחים הרפתקה משעשע 
 
       <br>
       </h3>
-    
+    </div>
       
       <!-- <a href="tel:+972508293951">+972 50-829-3951</a> -->
     
@@ -34,6 +37,6 @@
   </div>
 
 
-  <div class="col-md-2 col-xs-2">
+  <div class="col-md-2 col-xs-1">
   </div>
 </div>
