--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,39 @@
-<p>
-  about works!
-</p>
+<div class="row" style="background-color: #AB9750" >
+  <div class="col-md-1 col-xs-1">
+  </div>
+
+  
+  <div class="col-md-10 col-xs-10" id="contact" style="color: #191919;">
+      <div class="adds" style="background-color: #BCB37C">
+       
+    <h3 style="text-align: center" dir="rtl">
+        <h2  dir="rtl">Sniper</h2> גאים להציג לראשונה בארץ - אטרקציה מטווח ירי איירסופט נייד  
+      <br>
+      <br>
+      <div id="sniperList" dir="RTL"  style="text-align: center">
+          <ul style="color: #191919;">
+            <li><h4> 	ימי הולדת, בר/בת מצוות, מסיבות, ימי חברה, ימי גיבוש, מתאים לכל גיל!  </h4></li>
+            <li><h4> 	לשירותכם מבחר כלים דמוי אמיתיים: רובים M-16, AK-47 רובה קלצ'ניקוב, G-36, HK-416, אקדחים מסוג Colt, Glock, Beretta. </h4></li>
+            <li><h4> 	אתם בוחרים כלי, יורים, פוגעים במטרות קופצות, נהנים וזוכים בפרסים. </h4></li>
+            <li><h4> 	המטווח הינו נייד ונוכל להגיע לכל מקום שתרצו.  </h4></li>
+            <li><h4> 		המתקן נפתח לאורך של כ-7 מטר ורוחב של 2 מטר. </h4></li>
+            <li><h4> 		במטווח קיימות שתי עמדות.  </h4></li>
+            <li><h4> 		מדריכים מקצועיים. </h4></li>
+            <li><h4> 		בטיחות מלאה! </h4></li>
+          </ul>
+        </div>
+
+      <br>
+      </h3>
+    </div>
+      
+      <!-- <a href="tel:+972508293951">+972 50-829-3951</a> -->
+
+   
+  </div>
+
+
+  <div class="col-md-1 col-xs-1">
+  </div>
+</div>
+
