--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,19 +5,22 @@
 
   
   <div class="col-md-8 col-xs-10" id="contact" style="color: #191919;">
-      <div class="adds" style="background-color: #BCB37C">
-    <h3 style="text-align: center" >
+      <div class="adds" style=" background-color: #BCB37C;">
+          <!-- style="background-color: #BCB37C" -->
+    <h3 style="text-align: center" dir="rtl"><b>
       הזמן את האירוע הבא שלך
       וקבל חווית ירי חדשה, כמו שלא
       חווית מעולם, וכל זה בסביבה מהנה,
-     מרגשת ובטוחה.
+       מרגשת ובטוחה!
       <br>
+
       <br>
       בוא לחדד את יכולות הירי
      שלך, בין אם באירוע פרטי, אירוע חברה
      מסיבת יום הולדת, גיבוש צוות וכד.
-      אנו מבטיחים הרפתקה משעשע 
-
+    אנו מבטיחים הרפתקה משעשע 
+    
+    </b>
       <br>
       </h3>
     </div>
@@ -25,7 +28,7 @@
       <!-- <a href="tel:+972508293951">+972 50-829-3951</a> -->
     
     
-    <h1  id="howItWorks"  style="text-align: center">איך זה עובד</h1>
+    <!-- <h1  id="howItWorks"  style="text-align: center">איך זה עובד</h1>
     <div id="sniperList" dir="RTL"  style="text-align: center">
       <ul style="color: #191919;">
         <li><h4> מטווח ירי נייד - אנחנו נגיע אליכם </h4></li>
@@ -34,7 +37,7 @@
         <li><h4> בטיחות מלאה </h4></li>
       </ul>
     </div>
-  </div>
+  </div> -->
 
 
   <div class="col-md-2 col-xs-1">
