--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container">
-    <h4 class="text-muted" style="color: black;">Tatiana Pavlov - Web Designer & Developer כל הזכויות שמורות ל</h4>
+    <h4 class="text-muted" style="color: #D1D4AF;" dir="rtl"> כל הזכויות שמורות ל <a href="https://www.facebook.com/tpavlovdesign/" dir="ltr">Tatiana Pavlov - Web Designer & Developer</a></h4>
   </div>
 </footer>
