--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -6,12 +6,13 @@
 .img-thumbnail{
   margin-top: 20px;
   margin-bottom: 20px;
-  margin: auto;
+  /* margin: auto; */
   
 }
 @media screen and (min-width : 768px)
 {
  .img-thumbnail{
    height: 200px;
+   
  }
 }
